Fix #109307: memory leak changing simulation item name

Pull Request: https://projects.blender.org/blender/blender/pulls/109324